<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <LinearLayout
        android:background="@color/login_textcolor"
        android:layout_marginBottom="@dimen/margin_size"
        android:layout_marginRight="@dimen/margin_size"
        android:layout_marginLeft="@dimen/margin_size"
        android:layout_marginTop="@dimen/margin_size"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"/>
            <LinearLayout
                android:paddingTop="@dimen/padding_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:orientation="horizontal">
                <ImageView
                    android:onClick="goback"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_back"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"/>
                <ImageView
                    android:onClick="goback"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/exit"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/imageview1"
                android:layout_marginTop="@dimen/margin_size"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:src="@drawable/selectimg"/>
            <Button
                android:onClick="gogallery"
                android:layout_marginLeft="@dimen/margin_button_size"
                android:layout_marginRight="@dimen/margin_button_size"
                android:layout_marginTop="@dimen/text_size"
                android:layout_marginBottom="@dimen/text_size"
                android:text="@string/set_add_button"
                android:background="@drawable/roundbutton4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/button_text_color"/>
            <TextView
                android:text="PERSONAL INFORMATION"
                android:textColor="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="-20dp"/>
            <LinearLayout
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/roundbutton5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:paddingTop="@dimen/padding_text"
                        android:paddingLeft="@dimen/padding_text"
                        android:text="@string/fristname_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left"/>
                    <EditText
                        android:hint="@string/fristname_hint_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:paddingTop="@dimen/padding_text"
                        android:paddingLeft="@dimen/padding_text"
                        android:text="@string/Lastname_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left"/>
                    <EditText
                        android:hint="@string/lastname_hint_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:paddingTop="@dimen/padding_text"
                        android:paddingLeft="@dimen/padding_text"
                        android:text="@string/username_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left"/>
                    <EditText
                        android:hint="@string/username_hint_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:paddingTop="@dimen/padding_text"
                        android:paddingLeft="@dimen/padding_text"
                        android:text="@string/Email_address_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left"/>
                    <EditText
                        android:hint="@string/email_address_hint_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:paddingTop="@dimen/padding_text"
                        android:paddingLeft="@dimen/padding_text"
                        android:text="@string/Password_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left"/>
                    <EditText
                        android:hint="@string/password_hint_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:paddingTop="@dimen/padding_text"
                        android:paddingLeft="@dimen/padding_text"
                        android:text="@string/Confirm_Password_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left"/>
                    <EditText
                        android:hint="@string/confirm_password_hint_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:paddingTop="@dimen/padding_text"
                        android:paddingLeft="@dimen/padding_text"
                        android:text="@string/Mobile_number_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left"/>
                    <EditText
                        android:hint="@string/mobile_number_hint_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"/>
                </LinearLayout>
                <RelativeLayout
                    android:id="@+id/relativelayout1"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">
                    <TextView
                        android:id="@+id/rtext1"
                        android:paddingTop="@dimen/padding_layout"
                        android:paddingLeft="@dimen/padding_text"
                        android:text="@string/Bio_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="70dp"
                        android:layout_height="40dp"
                        android:gravity="left"/>
                    <TextView
                        android:id="@+id/redit1"
                        android:layout_toRightOf="@+id/rtext1"
                        android:hint="@string/Bio_hint_text"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:gravity="center"/>
                    <EditText
                        android:id="@+id/redit2"
                        android:layout_below="@+id/rtext1"
                        android:textColor="@color/button_text_color"
                        android:textSize="@dimen/text_size"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        android:layout_weight="2"
                        android:gravity="center"/>

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:text="PERSONAL INFORMATION"
                android:textColor="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="0.3"
                android:gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="-20dp"
                android:layout_marginTop="35dp"/>
            <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/roundbutton5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:paddingTop="@dimen/padding_text"
                android:paddingLeft="@dimen/padding_text"
                android:text="@string/Industry_text"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/text_size"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"/>
                <Spinner
                    android:layout_weight="2"
                    android:id="@+id/spinner1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/country_arrays"
                    android:prompt="@string/country_prompt" />

            </LinearLayout>
            <Button
                android:text="@string/create_acount_button_text"
                android:background="@drawable/roundbutton3"
                android:textColor="@color/login_textcolor"
                android:layout_marginRight="@dimen/margin_button_size"
                android:layout_marginLeft="@dimen/margin_button_size"
                android:layout_marginTop="@dimen/margin_size"
                android:layout_marginBottom="@dimen/margin_size"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        </ScrollView>
    </LinearLayout>
</LinearLayout>