<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <LinearLayout
        android:layout_marginRight="40px"
        android:layout_marginLeft="40px"
        android:layout_width="match_parent"
        android:layout_height="220px"
        android:layout_weight="3"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="185dp"
            android:text="@string/login_text"
            android:textSize="@dimen/text_center_size"
            android:textColor="@color/login_textcolor"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginBottom="50dp"/>
        <LinearLayout
            android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:layout_width="match_parent"
            android:layout_height="40px"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/roundtext1"
            >
            <ImageView
                android:paddingLeft="20dp"
                android:paddingRight="17dp"
                android:src="@drawable/ic_user_on"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/username"
                android:hint="@string/hint_text_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:textSize="@dimen/text_size"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="40px"
            android:layout_marginRight="40px"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40px"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/roundtext1"
            >
            <ImageView
                android:paddingLeft="20dp"
                android:paddingRight="17dp"
                android:src="@drawable/ic_key_on"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/password"
                android:hint="@string/hint_text_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>


        <Button
            android:onClick="gomain"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="@dimen/margin_size"
            android:layout_marginTop="10dp"
            android:text="@string/login_text"
            android:background="@drawable/roundbuton1"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/text_size"
            android:layout_width="match_parent"
            android:layout_height="25px"
            android:layout_weight="1"/>
        <TextView
            android:onClick="showtoast"
            android:text="@string/forget_password_text"
            android:textColor="@color/login_textcolor"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="12dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
    </LinearLayout>
</LinearLayout>